Fix visible spaces

--- a/styles/typography.sass
+++ b/styles/typography.sass
@@ -134,6 +134,8 @@ a[href]:hover, a[href]:active
 a[href]:visited
   color: #22c79a
 
+.visible-space
+  position: relative
 
 .visible-space[data-whitespace="0x20"]::before
   content: "·"
@@ -142,6 +144,7 @@ a[href]:visited
   position: absolute
   color: #509e9e
   text-shadow: none
+  pointer-events: none
 
 
 .visible-space[data-whitespace="0xa"]::before
@@ -151,6 +154,7 @@ a[href]:visited
   position: absolute
   color: #509e9e
   text-shadow: none
+  pointer-events: none
 
 
 .st .visible-space[data-whitespace="0x20"]::before
@@ -160,6 +164,7 @@ a[href]:visited
   position: absolute
   color: inherit
   text-shadow: none
+  pointer-events: none
 
 
 .st .visible-space[data-whitespace="0xa"]::before
@@ -169,6 +174,7 @@ a[href]:visited
   position: absolute
   color: inherit
   text-shadow: none
+  pointer-events: none
 
 .co .visible-space::before
   display: none
